--- a/Casa Decor/index.html
+++ b/Casa Decor/index.html
@@ -5,26 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina Inicial</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=shopping_cart" />
 </head>
 <body>
     <header>
-       <img src="WhatsApp_Image_2024-10-26_at_3.00.13_PM-removebg-preview.png" alt="logo" class="logo">
-       <div class="conteiner">
-        <nav class="menu">
-            <ul class="navbar">
-                <li><a href="#">Mais vendidos</a></li>
-                <li><a href="#">Eletrônicos</a></li>
-                <li><a href="#">Móveis</a></li>
-                <li><a href="#">Infantil</a></li>
-                <li><a href="#">Contatos</a></li>
-            </ul>
-        </div>
-        </nav>
+       <div class="container">
+           <div class="logo"><img src="WhatsApp_Image_2024-10-26_at_3.00.13_PM-removebg-preview.png" alt="logo" ></div>
+           <div class="conteiner">
+            <nav class="menu">
+                <ul class="navbar">
+                    <li><a href="#">Cozinha</a></li>
+                    <li><a href="#">Eletrônicos</a></li>
+                    <li><a href="#">Móveis</a></li>
+                    <li><a href="#">Infantil</a></li>
+                    <li><a href="#">Contatos</a></li>
+                    <li><a href="#">
+                        <span class="material-symbols-outlined">
+                            shopping_cart
+                            </span>
+                    </a></li>
+                </ul>
+            </div>
+            </nav>
+       </div>
     </header>
     <main>
+       
         <section>
             <div class="produtos">
-                
+                <article>
+                    <h2>Bem-vindo à Casa Decor!</h2>
+                    <h3>Explore nossas coleções e inspire-se a criar espaços que refletem sua personalidade. Aproveite também nossas ofertas especiais e promoções! <br>
+
+                        Sua casa, seu estilo. Venha descobrir tudo o que a Casa Decor pode fazer por você!</h3>
+                </article>
+                <div class="container2">
+                    <div class="whitebox">
+                        <div class="items">
+                            <div class="item1">
+                                <div class="product">
+                                    <img src="imagens/2149385437.jpg" alt="">
+                                </div>
+                                <div class="produtoinfo">
+                                    <h4>Sofá na cor azul de Camurça </h4>
+                                    <h4>R$ 1600,00</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
